--- a/clean_data.Rmd
+++ b/clean_data.Rmd
@@ -19,9 +19,9 @@ raw_data <- read_csv('data/adult21.csv')
 ```
 ```{r select columns}
 data_select <- raw_data %>%
-  select(REGION, SEX_A, CVDDIAG_A, NATUSBORN_A, RACEALLP_A, MEDNG12M_A,
+  dplyr::select(REGION, SEX_A, CVDDIAG_A, NATUSBORN_A, RACEALLP_A, MEDNG12M_A,
          PAYWORRY_A, DIBEV_A, ASEV_A, CHLEV_A, HYPEV_A, MEDRXTRT_A,
-         HLTHCOND_A, DXRESP_A, DEPEV_A, SMKNOW_A) %>% 
+         HLTHCOND_A, DEPEV_A) %>% 
   filter(SEX_A == 1 | SEX_A == 2,
          CVDDIAG_A == 1 | CVDDIAG_A == 2, 
          NATUSBORN_A == 1 | NATUSBORN_A == 2,
@@ -62,7 +62,6 @@ data_train$DIBEV_A <- as.factor(data_train$DIBEV_A)
 data_train$MEDNG12M_A <- as.factor(data_train$MEDNG12M_A)
 data_train$PAYWORRY_A <- as.factor(data_train$PAYWORRY_A)
 data_train$RACEALLP_A <- as.factor(data_train$RACEALLP_A)
-data_train$DXRESP_A <- as.factor(data_train$DXRESP_A)
 data_train$MEDRXTRT_A <- as.factor(data_train$MEDRXTRT_A)
 data_train$HLTHCOND_A <- as.factor(data_train$HLTHCOND_A)
 data_train$DEPEV_A <- as.factor(data_train$DEPEV_A)
@@ -81,7 +80,6 @@ data_test$DIBEV_A <- as.factor(data_test$DIBEV_A)
 data_test$MEDNG12M_A <- as.factor(data_test$MEDNG12M_A)
 data_test$PAYWORRY_A <- as.factor(data_test$PAYWORRY_A)
 data_test$RACEALLP_A <- as.factor(data_test$RACEALLP_A)
-data_test$DXRESP_A <- as.factor(data_test$DXRESP_A)
 data_test$MEDRXTRT_A <- as.factor(data_test$MEDRXTRT_A)
 data_test$HLTHCOND_A <- as.factor(data_test$HLTHCOND_A)
 data_test$DEPEV_A <- as.factor(data_test$DEPEV_A)
