--- a/lda.Rmd
+++ b/lda.Rmd
@@ -28,6 +28,7 @@ data_train$RACEALLP_A <- as.factor(data_train$RACEALLP_A)
 data_train$MEDRXTRT_A <- as.factor(data_train$MEDRXTRT_A)
 data_train$HLTHCOND_A <- as.factor(data_train$HLTHCOND_A)
 data_train$DEPEV_A <- as.factor(data_train$DEPEV_A)
+data_train$AGE <- as.factor(data_train$AGE)
 data_train <- data_train %>% 
   dplyr::select(-X)
 str(data_train)
@@ -47,6 +48,7 @@ data_test$RACEALLP_A <- as.factor(data_test$RACEALLP_A)
 data_test$MEDRXTRT_A <- as.factor(data_test$MEDRXTRT_A)
 data_test$HLTHCOND_A <- as.factor(data_test$HLTHCOND_A)
 data_test$DEPEV_A <- as.factor(data_test$DEPEV_A)
+data_test$AGE <- as.factor(data_test$AGE)
 data_test = data_test %>% 
   dplyr::select(-X)
 str(data_test)
