--- a/clean_data.Rmd
+++ b/clean_data.Rmd
@@ -19,9 +19,14 @@ raw_data <- read_csv('data/adult21.csv')
 ```
 ```{r select columns}
 data_select <- raw_data %>%
-  dplyr::select(REGION, SEX_A, CVDDIAG_A, NATUSBORN_A, RACEALLP_A, MEDNG12M_A,
+  dplyr::select(REGION, AGEP_A, SEX_A, CVDDIAG_A, NATUSBORN_A, RACEALLP_A, MEDNG12M_A,
          PAYWORRY_A, DIBEV_A, ASEV_A, CHLEV_A, HYPEV_A, MEDRXTRT_A,
          HLTHCOND_A, DEPEV_A) %>% 
+  mutate(AGE = case_when(AGEP_A <= 30 ~ 1,
+                         AGEP_A > 30 & AGEP_A <= 45 ~ 2,
+                         AGEP_A > 45 & AGEP_A <= 60 ~ 3,
+                         AGEP_A > 60 & AGEP_A <= 84 ~ 4,
+                         AGEP_A == 85 ~ 5)) %>%
   filter(SEX_A == 1 | SEX_A == 2,
          CVDDIAG_A == 1 | CVDDIAG_A == 2, 
          NATUSBORN_A == 1 | NATUSBORN_A == 2,
@@ -35,6 +40,9 @@ data_select <- raw_data %>%
          MEDRXTRT_A == 1 | MEDRXTRT_A == 2,
          HLTHCOND_A == 1 | HLTHCOND_A == 2,
          DEPEV_A == 1 | DEPEV_A == 2)
+
+data_select <- data_select %>%
+  dplyr::select(-AGEP_A)
 ```
 
 ```{r drop na}
@@ -65,6 +73,7 @@ data_train$RACEALLP_A <- as.factor(data_train$RACEALLP_A)
 data_train$MEDRXTRT_A <- as.factor(data_train$MEDRXTRT_A)
 data_train$HLTHCOND_A <- as.factor(data_train$HLTHCOND_A)
 data_train$DEPEV_A <- as.factor(data_train$DEPEV_A)
+data_train$AGE <- as.factor(data_train$AGE)
 str(data_train)
 ```
 
@@ -83,6 +92,7 @@ data_test$RACEALLP_A <- as.factor(data_test$RACEALLP_A)
 data_test$MEDRXTRT_A <- as.factor(data_test$MEDRXTRT_A)
 data_test$HLTHCOND_A <- as.factor(data_test$HLTHCOND_A)
 data_test$DEPEV_A <- as.factor(data_test$DEPEV_A)
+data_test$AGE <- as.factor(data_test$AGE)
 str(data_test)
 ```
 
